--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 
             </br>
             <button onclick="authors()">Authors</button>
+            <p>In no particular order and only a few mentioned. </p>
 
             <div id='books_table' style='display:none'>
                <ul>
@@ -322,18 +323,44 @@
             <div id='books_shelf' style='display:none'>
                <ul>
                   <li><a href='https://www.wolframscience.com/nks/p1--an-outline-of-basic-ideas/'>A new kind of science</a> - Stephen Wolfrom</li>
-                  <li>A walk into the woods - Bill Bryson</li>
+                  <li>The color purple - Alice walker </li>
+                  <li>Love in the time of cholera</li>
+                  <li>At the existentialist cafe-Sarah Bakewell</li>
+                  <li>Walden - Henry David Thoreau</li>
+                  <li>On the road - jack Kerouac</li>
+                  <li>This side of paradise - Scott Fitzgerald</li>
+                  <li>Naked lunch - William S Burroughs</li>
+                  <li>The fountain head - Ayn Rand</li>
+                  <li>The Stranger - Albert Camus</li>
                   <li>The bell jar - Sylvia Plath</li>
+                  <li>The great gatsby (restart)</li>
+                  <li>A farewell to arms - Ernest Hemingway</li>
+                  <li>How I became a socialist - Helen Keller</li>
+                  <li>All quiet on the western front</li>
+                  <li>The time machine  - h g wells</li>
+                  <li>The metamorphosis - frans Kafka</li>
+                  <li>The war of the worlds - H G Wells</li>
+                  <li>The great gatsby (restart)</li>
+                  <li>The sun also rises - Ernest Hemingway </li>
+                  <li>The communist manifesto - Karl Marx</li>
+                  <li>The invisible man - H G Wells</li>
+                  <li>TA brave new world</li>
+                  <li>Ulysses - James Joyce</li>
+                  <li>Mother Maxim Gorky</li>
+                  <li>War and peace - Leo Tolstoy</li>
+                  <li>The nose - Nikolai Gogol</li>
+                  <li>Demons - Fyodor Doestovsky</li>
+                  <li>The brothers karamazov </li>
                </ul>
             </div>
             <div id='books_store' style='display:none'>
             </div>
             <div id='books_read' style='display:none'>
-               <p>In no particular order and only a few mentioned. </p>
                <ul>
                   <li>The Scarlet letter - Nathaniel Hawthorne</li>
                   <li>Kafka on the shore - Haruki Murakami</li>
                   <li>A gentlemen in Moscow - Amor Towels</li>
+                  <li>When breathe becomes air - Paul Kalanithi</li>
                   <li>Pachinko - Lee Min Jin</li>
                   <li>Dead souls - Nikolai Gogol</li>
                   <li>One flew over the cuckoo's nest - Ken Kesey</li>
@@ -345,7 +372,27 @@
                   <li>Flowers for Algernon - Daniel Keys</li>
                </ul>
             </div>
-            <div id='authors' style='display:none'>
+            <div id='books_authors' style='display:none'>
+               <ul>
+                  <li>Pushkin</li>
+                  <li>Haruki murakami </li>
+                  <li>Dostoevsky</li>
+                  <li>Zora Neale Hurston</li>
+                  <li>Edith Wharton</li>
+                  <li>Harriet Ann Jacobs</li>
+                  <li>T S Elliot</li>
+                  <li>George sand French author</li>
+                  <li>George Eliot</li>
+                  <li>Vladimir Nabokov</li>
+                  <li>Nikolai Gogol</li>
+                  <li>George Eliot</li>
+                  <li>Albert Camus</li>
+                  <li>Jean Paul Sartre</li>
+                  <li>Soren Kierkegaard</li>
+                  <li>Simone de Beauvior</li>
+                  <li>Martin Heidegger</li>
+                  <li>Nietzsche</li>
+               </ul>
             </div>
          </div>
          <!--         Websites         -->
