--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
             <div id='books_table' style='display:none'>
                <ul>
-                  <li>Warriors don't cry - Melba Pattillo Beals</li>
+                  <li>The Brothers Karamazov - Fyodor Doestovsky</li>
                   <li>A walk into the woods - Bill Bryson</li>
                   <li>The bell jar - Sylvia Plath</li>
                </ul>
@@ -354,6 +354,7 @@
                </ul>
             </div>
             <div id='books_store' style='display:none'>
+               <ul></ul>
             </div>
             <div id='books_read' style='display:none'>
                <ul>
@@ -370,6 +371,7 @@
                   <li>Turtles all the way down - John Greene</li>
                   <li>Lolita - Vladimir Nabokov</li>
                   <li>Flowers for Algernon - Daniel Keys</li>
+                  <li>Warriors don't cry - Melba Pattillo Beals</li>
                </ul>
             </div>
             <div id='books_authors' style='display:none'>
