--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
             <a href="#" onclick="websites()">Websites</a>
             <a href="#" onclick="math_puzz()">Math puzzles</a>
             <a href="#" onclick="people()">People</a>
+            <a href="#" onclick="phd_res()">PhD Resources</a>
          </div>
          <!--         Initial display         -->
          <div id='prsnl_space'>
@@ -405,6 +406,13 @@
                <li><a href='https://deepmind.com/'>DeepMind</a></li>
             </ul>
 
+         </div>
+         <!--         PhD Resources         -->
+         <div id='phd_rsrcs' style='display:none;'>
+            <p>Helpful links to facilitate my start of PhD.</p>
+            <a href='https://www.exordo.com/blog/the-best-academic-blogs/'>Important blogs list</a>
+            <a href='https://roostervane.com/noregret/'>Rooster Vane (No regrets)</a>
+            <a href='https://roostervane.com/category/career/'>Roostervane's blog</a>
          </div>
       </div>
 
