--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
          <p>I'd never dare attempt to walk the Appalachian Trail myself, so, might as well read about it.</p>
          <br />
          <p>This weeks song :</p>
-         <a href="https://www.youtube.com/watch?v=aXjdMV7SOfE&list=RDQEdPe1SxitI&index=2" style="color:black;">Unforgettable - Nat King Cole</a>
+         <a href="https://www.youtube.com/watch?v=MwpMEbgC7DA" style="color:black;">Tom Odell - Another Love</a>
       </div>
       <!--Deadlines Section on Overhead bar-->
       <div id="Deadlines" class="tabcontent box">
@@ -262,6 +262,7 @@
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
             <ul>
+               <li>Narasimha Karumachi - Thin</li>
                <li>Python for Machine Learning</li>
                <li>MIT challenge book for Machine learning.</li>
             </ul>
@@ -404,6 +405,7 @@
             <ul>
                <li><a href='https://medium.com/'>Medium</a></li>
                <li><a href='https://deepmind.com/'>DeepMind</a></li>
+               <li><a href='https://www.coursera.org/in-progress'>Coursera</a></li>
             </ul>
 
          </div>
@@ -411,8 +413,11 @@
          <div id='phd_rsrcs' style='display:none;'>
             <p>Helpful links to facilitate my start of PhD.</p>
             <a href='https://www.exordo.com/blog/the-best-academic-blogs/'>Important blogs list</a>
+            <br/>
             <a href='https://roostervane.com/noregret/'>Rooster Vane (No regrets)</a>
+            <br/>
             <a href='https://roostervane.com/category/career/'>Roostervane's blog</a>
+            <br/>
          </div>
       </div>
 
