--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             Marcus Aurelius
          </p>
          <br/>
-         <p><b>Book in my hand : A walk in the woods by Bill Bryson </b></p>
+         <p><b>Book in my hand : The Brothers Karamazov </b></p>
          <p>I'd never dare attempt to walk the Appalachian Trail myself, so, might as well read about it.</p>
          <br />
          <p>This weeks song :</p>
@@ -262,7 +262,8 @@
          <div id="corbooksid" style="display:none">
             <h3>Good books for academics and learning</h3>
             <ul>
-               <li>Narasimha Karumachi - Thin</li>
+               <li>Narasimha Karumachi - DSA in Python</li>
+               <li>Murphy - Machine Learning (SVM - Chapter 14)</li>
                <li>Python for Machine Learning</li>
                <li>MIT challenge book for Machine learning.</li>
             </ul>
@@ -441,12 +442,6 @@
             <a href="https://getkion.com/articles/mind/sleep/how-to-sleep-better/">How to sleep well</a>
             <a href="http://brainscale.net/dual-n-back">Games for brain</a>
          </div>
-      </div>
-
-      <div id="justlit" class="tabcontent box">
-         <h3>Literature and literature only.</h3>
-         <p>Book reviews and things I like. I need to write a databas for this.</p>
-         <p>I wanna experiment with new databases.</p>
       </div>
 
       <div id="contactInfo" class="tabcontent box">
