--- a/index.html
+++ b/index.html
@@ -148,11 +148,23 @@
       </div>
       <!--Deadlines Section on Overhead bar-->
       <div id="Deadlines" class="tabcontent box">
-         <h3>Approaching Deadlines</h3>
+
          <div class="sidenav">
+            <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
-         <div id="selfChal" style="display:block">
+         <div id='intro_cp' style="display:none;">
+            <p>This section primarily maintains status of current projects.</p>
+            <p>A project currently in Growing work is relieved to Completed tasks only if it meets all the criteria.</p>
+         </div>
+         <div id='prjct_now' style='display:none'>
+            <ul>
+               <li>LinkedIn Course</li>
+               <li>Coursera Course</li>
+               <li>Theory of Computation</li>
+            </ul>
+         </div>
+         <div id="selfChal" style="display:none">
             <ul style="color:black; text-align:left;">
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
@@ -275,6 +287,7 @@
                <li>Turing Machine</li>
                <li>Conway's game of life</li>
                <li>Simulation games</li>
+               <li>Theory of Computational Equivalence</li>
             </ul>
          </div>
          <div id="interprep" style="display:none; align=left; color:black;">
