--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
          </div>
          <div id='prjct_now' style='display:none'>
             <ul>
+               <li><a href=''>Broad overview of ML algorithms</a></li>
                <li>LinkedIn Course</li>
                <li>Coursera Course</li>
                <li>Theory of Computation</li>
@@ -304,6 +305,7 @@
             <a href="#" onclick="books()">Books</a>
             <a href="#" onclick="websites()">Websites</a>
             <a href="#" onclick="math_puzz()">Math puzzles</a>
+            <a href="#" onclick="acad_proj()">Academic mini Projects</a>
             <a href="#" onclick="people()">People</a>
             <a href="#" onclick="phd_res()">PhD Resources</a>
          </div>
@@ -431,6 +433,11 @@
             <br/>
             <a href='https://roostervane.com/category/career/'>Roostervane's blog</a>
             <br/>
+         </div>
+         <div id='acad_projts' style='display:none;'>
+            <ol>
+               <li>Implement SOM on Iris dataset and handwritten digits detection</li>
+            </ol>
          </div>
       </div>
 
