--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
          </div>
          <div id='prjct_now' style='display:none'>
             <ul>
-               <li><a href=''>Broad overview of ML algorithms</a></li>
+               <li><a href='https://github.com/amueller/introduction_to_ml_with_python'>Broad overview of ML algorithms</a></li>
                <li>LinkedIn Course</li>
                <li>Coursera Course</li>
                <li>Theory of Computation</li>
