--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
       </div>
 
       <div id="contactInfo" class="tabcontent box">
+         <p>The terrible thing about beauty is not only fearful but also mysterious.
+         Here the devil is struggling with God, and the battlefield is the human heart.
+         - The brothers Karamazov, Fyodor Doestovsky</p>
          <h3>Personal contact information</h3>
          <ul>
             <li>Mail ID: akhiladevi95@gmail.com</li>
