--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
             <div id='books_table' style='display:none'>
                <ul>
                   <li>The Brothers Karamazov - Fyodor Doestovsky</li>
-                  <li>A walk into the woods - Bill Bryson</li>
                   <li>The bell jar - Sylvia Plath</li>
+                  <li><a href='https://www.goodreads.com/list/show/6.Best_Books_of_the_20th_Century'>Potential book list</a></li>
                </ul>
             </div>
             <div id='books_shelf' style='display:none'>
@@ -411,6 +411,10 @@
                   <li>Simone de Beauvior</li>
                   <li>Martin Heidegger</li>
                   <li>Nietzsche</li>
+                  <li>B.F. Skinner</li>
+                  <li>James Whitcomb Riley</li>
+                  <li>Henry Wadsworth Longfellow</li>
+                  <li>Harriet Beecher Stowe</li>
                </ul>
             </div>
          </div>
