--- a/index.html
+++ b/index.html
@@ -450,6 +450,11 @@
                <li>Implement SOM on Iris dataset and handwritten digits detection</li>
             </ol>
          </div>
+         <div id='math_pzls' style='display:none;'>
+            <ol>
+               <li>Tower of Hanoi.[Code in Github]</li>
+            </ol>
+         </div>
       </div>
 
       <div id="goals" class="tabcontent box">
