--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
          <div id='prjct_now' style='display:none'>
             <ul>
                <li><a href='https://github.com/amueller/introduction_to_ml_with_python'>Broad overview of ML algorithms</a></li>
+               <li><a href='https://www.deeplearningbook.org/'>Deep Learning - Ian Goodfellow, Yoshua Bengio</a></li>
                <li>LinkedIn Course</li>
                <li>Coursera Course</li>
                <li>Theory of Computation</li>
