--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <ul>
                <li><a href='https://github.com/amueller/introduction_to_ml_with_python'>Broad overview of ML algorithms</a></li>
                <li><a href='https://www.deeplearningbook.org/'>Deep Learning - Ian Goodfellow, Yoshua Bengio</a></li>
+               <li>Python Machine learning - Sebastian Raschka<>
                <li>LinkedIn Course</li>
                <li>Coursera Course</li>
                <li>Theory of Computation</li>
