--- a/index.html
+++ b/index.html
@@ -165,10 +165,11 @@
          </div>
          <div id='prjct_now' style='display:none'>
             <ul>
-               <li><a href='https://github.com/amueller/introduction_to_ml_with_python'>Broad overview of ML algorithms</a></li>
+               <li><a href='https://course.fast.ai/'>Practical AI with Deep Learning by Google</a></li>
                <li><a href='https://www.deeplearningbook.org/'>Deep Learning - Ian Goodfellow, Yoshua Bengio</a></li>
                <li>Python Machine learning - Sebastian Raschka</li>
                <li>Linear Algebra course by Gilbert Strong</li>
+               <li><a href='https://github.com/amueller/introduction_to_ml_with_python'>Broad overview of ML algorithms</a></li>
                <li>LinkedIn Course</li>
                <li>Coursera Course</li>
                <li>Theory of Computation</li>
