--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             Marcus Aurelius
          </p>
          <br/>
-         <p><b>Book in my hand : The Brothers Karamazov </b></p>
+         <p><b>Book in my hand : Man's search for meaning by Viktor Frankl </b></p>
          <br />
          <p>This weeks song :</p>
          <a href="https://www.youtube.com/watch?v=MwpMEbgC7DA" style="color:black;">Tom Odell - Another Love</a>
@@ -158,10 +158,6 @@
          <div class="sidenav">
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
-         </div>
-         <div id='intro_cp' style="display:none;">
-            <p>This section primarily maintains status of current projects.</p>
-            <p>A project currently in Growing work is relieved to Completed tasks only if it meets all the criteria.</p>
          </div>
          <div id='prjct_now' style='display:none'>
             <ul>
@@ -181,7 +177,7 @@
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
                <li>R for Data Science book</li>
-               <li>Chackout hadley whickham books</li>
+               <li>Checkout hadley whickham books</li>
             </ul>
          </div>
       </div>
