--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
          </div>
          <div id="selfChal" style="display:none">
             <ul style="color:black; text-align:left;">
+               <li><a href='https://www.youtube.com/playlist?list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv'>Stanford CNN for Visual Recognition(Video Lectures)</a></li>
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
                <li>R for Data Science book</li>
