--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
 
             <div id='books_table' style='display:none'>
                <ul>
+                  <li>Man's searching for meaning - Victor Frankl</li>
                   <li>The Brothers Karamazov - Fyodor Doestovsky</li>
                   <li>The bell jar - Sylvia Plath</li>
                   <li><a href='https://www.goodreads.com/list/show/6.Best_Books_of_the_20th_Century'>Potential book list</a></li>
@@ -384,6 +385,12 @@
             </div>
             <div id='books_read' style='display:none'>
                <ul>
+                  <li>The Opposite of Loneliness - Keegan, Marina</li>
+                  <li>Anne of Green Gables - L M Montgomery</li>
+                  <li>Water for Elephants - Gruen, Sara</li>
+                  <li>A man called Ove - 	Backman, Fredrik </li>
+                  <li>A room of one's own - 	Woolf, Virginia </li>
+                  <li>The stranger - 	Camus, Albert </li>
                   <li>The Scarlet letter - Nathaniel Hawthorne</li>
                   <li>Kafka on the shore - Haruki Murakami</li>
                   <li>A gentlemen in Moscow - Amor Towels</li>
