--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
                   <li>The Brothers Karamazov - Fyodor Doestovsky</li>
                   <li>The bell jar - Sylvia Plath</li>
                   <li><a href='https://www.goodreads.com/list/show/6.Best_Books_of_the_20th_Century'>Potential book list</a></li>
+                  <li><a href='https://www.goodreads.com/list/show/46.Best_Feminist_Fiction'>Feminst Novels</a></li>
                </ul>
             </div>
             <div id='books_shelf' style='display:none'>
