--- a/index.html
+++ b/index.html
@@ -177,8 +177,6 @@
                <li><a href='https://www.youtube.com/playlist?list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv'>Stanford CNN for Visual Recognition(Video Lectures)</a></li>
                <li>Machine Learning book in MIT challenge</li>
                <li>Python for machine learning</li>
-               <li>R for Data Science book</li>
-               <li>Checkout hadley whickham books</li>
             </ul>
          </div>
       </div>
@@ -206,6 +204,7 @@
             <h3 style="color:black">Unique Topics</h3>
             <button onclick="ss_dm()">Data Mining topics</button>
             <button onclick="ss_ml()">Machine Learning topics</button>
+            <button onclick="ss_dl()">Deep Learning topics</button>
 
             <div id="ss_ml" style="display:none;">
                <ul style="text-align:left; color:black;">
@@ -251,6 +250,11 @@
                   <li>Regression trees in An introduciton to statistical learning.</li>
                   <li>Text analysis.(Checkout 'quanteda' package in R)</li>
                </ul>
+            </div>
+            <div id="ss_dl" style="display:none;">
+            </br>
+               <a href="https://medium.com/@alittlepain833/simple-understanding-of-mask-rcnn-134b5b330e95#:~:text=Mask%20RCNN%20is%20a%20deep,two%20stages%20of%20Mask%20RCNN.">
+               Mask RCNN</a>
             </div>
          </div>
          <div id="extr_srcs" style="display:none;">
