--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                <li><a href="https://www.youtube.com/watch?v=OoUX-nOEjG0&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=2">CNN Stanford course lect-2 [56min]</a></li>
                <li><a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">[CODING CHALLENGE] Deep learning theory by YannLeCun</a></li>
                <li><a href="https://towardsdatascience.com/ensemble-methods-bagging-boosting-and-stacking-c9214a10a205">Theory - Bagging, Boosting and Stacking [30min]</a></li>
+               <li><a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Easy read - PyTorch Computer Vision</a></li>
                <li><a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture [1:30min]</a></li>
                <li>Find a simple read</li>
             </ol>
