--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                <li><a href="https://towardsdatascience.com/ensemble-methods-bagging-boosting-and-stacking-c9214a10a205">Theory - Bagging, Boosting and Stacking [30min]</a></li>
                <li><a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Easy read - PyTorch Computer Vision</a></li>
                <li><a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture [1:30min]</a></li>
-               <li>Find a simple read</li>
+               <li>Find a simple read [DONE!!]</li>
             </ol>
          </div>
          <div id='prjct_now' style='display:none'>
