--- a/index.html
+++ b/index.html
@@ -394,6 +394,21 @@
                   <li>The nose - Nikolai Gogol</li>
                   <li>Demons - Fyodor Doestovsky</li>
                   <li>The brothers karamazov </li>
+                  <li>War and peace</li>
+                  <li>Infinite Zest</li>
+                  <li>A dance with dragons</li>
+                  <li>Les Miserables</li>
+                  <li>Don Quixote</li>
+                  <li>The stand</li>
+                  <li>Jonathan strange and Mr. Norell</li>
+                  <li> Atlas shrugged</li>
+                  <li>A suitable boy</li>
+                  <li>Cryptonomicon</li>
+                  <li>The tale of Genji</li>
+                  <li>An American tragedy</li>
+                  <li>Look homeward angel</li>
+                  <li>Powering the dream</li>
+                  <li>The code breakers</li>
                </ul>
             </div>
             <div id='books_store' style='display:none'>
@@ -426,8 +441,10 @@
             <div id='books_authors' style='display:none'>
                <ul>
                   <li>Pushkin</li>
-                  <li>Haruki murakami </li>
                   <li>Dostoevsky</li>
+                  <li>Haruki murakami </li>
+                  <li> Charles Bukowski </li>
+                  <li> William Packard </li>
                   <li>Zora Neale Hurston</li>
                   <li>Edith Wharton</li>
                   <li>Harriet Ann Jacobs</li>
