Today task update

--- a/index.html
+++ b/index.html
@@ -156,18 +156,23 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">July 30 2020</a>
+            <a href="#" onclick="today()">August 4 2020</a>
+            <a href="#" onclick="yesterday()">July 30 2020</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li><a href="https://www.youtube.com/watch?v=OoUX-nOEjG0&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=2">CNN Stanford course lect-2 [56min][DONE!!]</a></li>
-               <li><a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">[CODING CHALLENGE] Deep learning theory by YannLeCun</a></li>
+               <li><a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3">CNN Stanford course lect-3 [56min]</a></li>
+               <li><a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">[FEYNMAN TECHNIQUE] Deep learning theory by YannLeCun - Backward Propogation</a></li>
                <li><a href="https://towardsdatascience.com/ensemble-methods-bagging-boosting-and-stacking-c9214a10a205">Theory - Bagging, Boosting and Stacking [30min]</a></li>
                <li><a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Easy read - PyTorch Computer Vision</a></li>
                <li><a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture [1:30min]</a></li>
-               <li>Find a simple read [DONE!!]</li>
+            </ol>
+         </div>
+         <div id='yestChal' style='display:none'>
+            <ol>
+               <li><a href="https://www.youtube.com/watch?v=OoUX-nOEjG0&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=2">CNN Stanford course lect-2 [56min][DONE!!]</a></li>
             </ol>
          </div>
          <div id='prjct_now' style='display:none'>
