--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          width: 600px;
          margin: 30px auto	;
          text-align: center;
+         margin-top: 100px;
          }
          .fa {
          padding: 20px;
@@ -126,7 +127,7 @@
       </style>
    </head>
    <body>
-      <div class="tab">
+      <div class="tab" style="position:fixed; top:10px; width:98.5%;">
          <button class="tablinks" onclick="eventdirect(event, 'mainInfo')" style="font-family:Courier; font-size:30px">AKHILA_DEVABHAKTUNI</button>
          <button class="tablinks" onclick="eventdirect(event,'Deadlines')" style="font-family:Palatino; font-size:20; margin-top:6px">Check Point</button>
          <button class="tablinks" onclick="eventdirect(event, 'headArea')" style="font-family:Palatino; font-size:20; margin-top:6px">Head area</button>
