--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
          padding: 6px 12px;
          border: 1px solid #ccc;
          border-top: 1px solid #ccc;
-         width : 460px
+         width : 460px;
+         margin-right: 20px;
+         width: 75%
          }
          ul {
          list-style-type: none;
@@ -164,11 +166,12 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li><a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3">CNN Stanford course lect-3 [56min]</a></li>
-               <li><a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">[FEYNMAN TECHNIQUE] Deep learning theory by YannLeCun - Backward Propogation</a></li>
-               <li><a href="https://towardsdatascience.com/ensemble-methods-bagging-boosting-and-stacking-c9214a10a205">Theory - Bagging, Boosting and Stacking [30min]</a></li>
-               <li><a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Easy read - PyTorch Computer Vision</a></li>
-               <li><a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture [1:30min]</a></li>
+               <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
+               <li>[FEYNMAN TECHNIQUE]<a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">Deep learning theory by YannLeCun - Backward Propogation</a></li>
+               <li>Theory - Bagging, Boosting and Stacking <a href="https://towardsdatascience.com/ensemble-methods-bagging-boosting-and-stacking-c9214a10a205">Summary [30min]</a></li>
+               <li>PyTorch Computer Vision<a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Theory</a></li>
+               <li>Study Ch 1-3 from Intro to Statistical Learning book.</li>
+               <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
             </ol>
          </div>
          <div id='yestChal' style='display:none'>
@@ -206,7 +209,7 @@
             <a href="#" onclick="uni_topic()">Unique Topics</a>
             <a href="#" onclick="rsrch_pap()">research_papers</a>
             <a href="#" onclick="art_pap()">interesting_articles</a>
-            <a href="#" onclick="math_concpt()">Math concepts</a>
+            <a href="#" onclick="math_concpt()">Math concepts/Perspective</a>
             <a href="#" onclick="inter_prep()">Interview Preparation</a>
          </div>
 
@@ -311,6 +314,7 @@
          </div>
          <!--Math concepts-->
          <div id="mathcncpt" style="display:none;">
+            <a>Gradient Descent <a href="https://eli.thegreenplace.net/2016/understanding-gradient-descent/">Mathematical</a> perspective.</a>
             <h3>Interesting concepts : Math or otherwise</h3>
             <ul>
                <li>Turing Machine</li>
