--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                <li>PyTorch Computer Vision<a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Theory</a></li>
                <li>Study Ch 1-3 from Intro to Statistical Learning book.</li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
+               <li>Search for how to activate and deactivate tabs in html.</li>
             </ol>
          </div>
          <div id='yestChal' style='display:none'>
