--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
    <head>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <!--[if lte IE 8]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
       <style>
          body {
@@ -590,6 +591,9 @@
             <ol>
                <li>Implement SOM on Iris dataset and handwritten digits detection</li>
             </ol>
+            <button id="exp_1"> Button 1</button>
+            <button id="exp_2"> Button 2</button>
+            <p id="dump">Akhila</p>
          </div>
          <div id='math_pzls' style='display:none;'>
             <ol>
@@ -638,39 +642,47 @@
 
    </body>
    <script type="text/javascript" src="index.js"></script>
-   <!--[if lt IE 9]>
-  <script type="text/javascript" src="excanvas.js"></script>
-<![endif]-->
+   <script type="text/javascript" src="segment-display.js"></script>
+   <script type="text/javascript">
 
-<script type="text/javascript" src="segment-display.js"></script>
-<script type="text/javascript">
+     var display = new SegmentDisplay("display");
+     display.pattern         = "##:##:##";
+     display.cornerType      = 2;
+     display.displayType     = 7;
+     display.displayAngle    = 9;
+     display.digitHeight     = 20;
+     display.digitWidth      = 12;
+     display.digitDistance   = 2;
+     display.segmentWidth    = 3;
+     display.segmentDistance = 0.5;
+     display.colorOn         = "rgba(0, 0, 0, 0.9)";
+     display.colorOff        = "rgba(0, 0, 0, 0.1)";
 
-  var display = new SegmentDisplay("display");
-  display.pattern         = "##:##:##";
-  display.cornerType      = 2;
-  display.displayType     = 7;
-  display.displayAngle    = 9;
-  display.digitHeight     = 20;
-  display.digitWidth      = 12;
-  display.digitDistance   = 2;
-  display.segmentWidth    = 3;
-  display.segmentDistance = 0.5;
-  display.colorOn         = "rgba(0, 0, 0, 0.9)";
-  display.colorOff        = "rgba(0, 0, 0, 0.1)";
+     animate();
 
-  animate();
+     function animate() {
+       var time    = new Date();
+       var hours   = time.getHours();
+       var minutes = time.getMinutes();
+       var seconds = time.getSeconds();
+       var value   = ((hours < 10) ? ' ' : '') + hours
+                   + ':' + ((minutes < 10) ? '0' : '') + minutes
+                   + ':' + ((seconds < 10) ? '0' : '') + seconds;
+       display.setValue(value);
+       window.setTimeout('animate()', 100);
+     }
 
-  function animate() {
-    var time    = new Date();
-    var hours   = time.getHours();
-    var minutes = time.getMinutes();
-    var seconds = time.getSeconds();
-    var value   = ((hours < 10) ? ' ' : '') + hours
-                + ':' + ((minutes < 10) ? '0' : '') + minutes
-                + ':' + ((seconds < 10) ? '0' : '') + seconds;
-    display.setValue(value);
-    window.setTimeout('animate()', 100);
-  }
-
-</script>
+   </script>
+   <script>
+   $(document).ready(function(){
+      $("button").click(function(){
+         $("#exp_1").click(function(){
+            $("#dump").hide()
+         });
+         $("#exp_2").click(function(){
+            $("#dump").show()
+         });
+      })
+   })
+   </script>
 </html>
