--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             </ol>
             <button id="exp_1"> Button 1</button>
             <button id="exp_2"> Button 2</button>
-            <p id="dump">Akhila</p>
+            <a href="https://api.jqueryui.com/tabs/" id="dump">Akhila</a>
          </div>
          <div id='math_pzls' style='display:none;'>
             <ol>
