--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@
             <ul>
                <li><a href='https://medium.com/'>Medium</a></li>
                <li><a href='https://deepmind.com/'>DeepMind</a></li>
+               <li><a href='https://openai.com/'>OpenAI</a></li>
                <li><a href='https://www.coursera.org/in-progress'>Coursera</a></li>
                <li><a href="https://zenhabits.net/">Zen Habits</a></li>
             </ul>
