--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
    <head>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
       <!--[if lte IE 8]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
       <style>
          body {
@@ -598,9 +598,6 @@
             <ol>
                <li>Implement SOM on Iris dataset and handwritten digits detection</li>
             </ol>
-            <button id="exp_1"> Button 1</button>
-            <button id="exp_2"> Button 2</button>
-            <a href="https://api.jqueryui.com/tabs/" id="dump">Akhila</a>
          </div>
          <div id='math_pzls' style='display:none;'>
             <ol>
@@ -679,17 +676,5 @@
        window.setTimeout('animate()', 100);
      }
 
-   </script>
-   <script>
-   $(document).ready(function(){
-      $("button").click(function(){
-         $("#exp_1").click(function(){
-            $("#dump").hide()
-         });
-         $("#exp_2").click(function(){
-            $("#dump").show()
-         });
-      })
-   })
    </script>
 </html>
