--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             Marcus Aurelius
          </p>
          <br/>
-         <p><b>Book in my hand : Man's search for meaning by Viktor Frankl </b></p>
+         <p><b>Book in my hand : The count of Monte Cristo </b></p>
          <br />
          <p>This weeks song :</p>
          <a href="https://www.youtube.com/watch?v=MwpMEbgC7DA" style="color:black;">Tom Odell - Another Love</a>
