--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <p>This is yet another futile attempt at trying to keep track.</p>
             <button onclick="books_table()">Books on the table</button>
             <button onclick="books_shelf()">Books on the shelf</button>
-            <button onclick="books_store()">Books in store</button>
+            <button onclick="books_store()">Books for PhD</button>
             <button onclick="books_read()">Books read</button>
 
             </br>
@@ -485,7 +485,9 @@
                </ul>
             </div>
             <div id='books_store' style='display:none'>
-               <ul></ul>
+               <ul>
+                  <li>Thesis Whispere <a href='https://docs.google.com/document/d/1MMl97gZXVPVQYQfiv6kBkg9ovlihgw7kf0rbCpjsdSo/edit'>recommended</a></li>
+               </ul>
             </div>
             <div id='books_read' style='display:none'>
                <ul>
