--- a/index.html
+++ b/index.html
@@ -539,6 +539,10 @@
                   <li>Emily Dickinson</li>
                   <li>Dorothy Osbourne</li>
                   <li>Anne Finch</li>
+                  <li>!!!!!!!!&&&&&&&&!!!!!!!!</li>
+                  <li>Stuart Kauffman</li>
+                  <li>steven johnson</li>
+                  <li>Malcolm Gladwell</li>
                   <li>Pushkin</li>
                   <li>Marcel Proust</li>
                   <li>Dostoevsky - Russian Lit</li>
