--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">August 25 2020</a>
+            <a href="#" onclick="today()">August 30 2020</a>
             <a href="#" onclick="yesterday()">July 30 2020</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
@@ -169,14 +169,15 @@
             <ol>
                <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
                <li>Harsha Coursera thing</li>
-               <li>Go through your Github repo for forked reposities</li>
-               <li>Look if something's <a href="http://neuralnetworksanddeeplearning.com/chap1.html">here</a></li>
-               <li>Implement code of the paper you read Image generation</li>
-               <li>[FEYNMAN TECHNIQUE]<a href="https://atcold.github.io/pytorch-Deep-Learning/en/week03/03-1/">Deep learning theory by YannLeCun - Backward Propogation</a></li>
+               <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
+               <li>Deep learning Chapter 4</li>
+               <li>Get caught up with classes and OS mainly</li>
+               <li>[FEYNMAN TECHNIQUE]<a href="https://atcold.github.io/pytorch-Deep-Learning/en/week04/04-1/">Deep learning theory by YannLeCun - Backward Propogation</a></li>
                <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
                <li>PyTorch Computer Vision<a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Theory</a></li>
                <li>Study Ch 1-3 from Intro to Statistical Learning book.</li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
+               <li>Implement code of the paper you read Image generation</li>
             </ol>
          </div>
          <div id='yestChal' style='display:none'>
