--- a/index.html
+++ b/index.html
@@ -280,6 +280,11 @@
             </div>
          </div>
          <div id="rsrch_pprs" style="display:none;">
+            <h5>Image to text synthesis</h5>
+            <p>Show and tell : A neural image caption generator <a href="https://arxiv.org/pdf/1411.4555.pdf">here</a></p>
+            <p>Deep visual-semantic Alignments for generating Image Descriptions(Fei Fei Li, Karpathy) <a href="https://cs.stanford.edu/people/karpathy/cvpr2015.pdf">here</a></p>
+            <p>Show, attens and tell : A neural image caption generation with visual attention <a href="https://arxiv.org/pdf/1502.03044.pdf">here</a></p>
+         </br>
             <h5>Image and Video Synthesis</h5>
             <p>Synthesizing talking faces from Audio <a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01150-y.pdf">here</a></p>
          </div>
