--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
          <div id="rsrch_pprs" style="display:none;">
             <h5>Revolutionary Deep Networks</h5>
             <p>U-Net for Bomedical Image Segmentation <a href="https://lmb.informatik.uni-freiburg.de/resources/software.php">Vision lab</a></p>
+         </br>
+         </br>
             <h5>Image to text synthesis</h5>
             <p>Show and tell : A neural image caption generator <a href="https://arxiv.org/pdf/1411.4555.pdf">here</a></p>
             <p>Deep visual-semantic Alignments for generating Image Descriptions(Fei Fei Li, Karpathy) <a href="https://cs.stanford.edu/people/karpathy/cvpr2015.pdf">here</a></p>
@@ -289,6 +291,8 @@
          </br>
             <h5>Image and Video Synthesis</h5>
             <p>Synthesizing talking faces from Audio <a href="https://link.springer.com/content/pdf/10.1007/s11263-019-01150-y.pdf">here</a></p>
+            <p>Segmentation of moving objects by long term Video Analysis <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6682905">here</a></p>
+            <p>Deep models for Road segmentation <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7759717">here</a></p>
          </div>
          <div id="artpap" style="display:none; align=left; color:black;">
             <h3>Interesting Articles</h3>
