--- a/index.html
+++ b/index.html
@@ -167,18 +167,19 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>Research paper - Audio to video synthesis <a href='https://link.springer.com/content/pdf/10.1007/s11263-019-01150-y.pdf'>here</a></li>
+               <li>[FEYNMAN TECHNIQUE]Deep learning theory by YannLeCun - <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">Linear algebra in Neural Network context</a></li>
                <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
                <li>Harsha Coursera thing</li>
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
-               <li>Deep learning Chapter 4</li>
-               <li>Get caught up with classes and OS mainly</li>
-               <li>[FEYNMAN TECHNIQUE]Deep learning theory by YannLeCun - <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week04/04-1/">Linear algebra in Neural Network context</a></li>
+               <li>Deep learning Chapter 5</li>
+               <li>Get caught up with OS </li>
+
                <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
-               <li>PyTorch Computer Vision<a href="https://medium.com/pytorch/pytorch-computer-vision-library-for-experts-and-beginners-84b9157584e5">Theory</a></li>
-               <li>Study Ch 1-3 from Intro to Statistical Learning book.</li>
+
+               <li>Study Ch 3 from Intro to Statistical Learning book.</li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
-               <li>Implement code of the paper you read Image generation</li>
+               <li>Implement code of the paper you read Image generation [DRAW and Audio to video]</li>
+               <li>Pick an absurd idea to learn or implement</li>
             </ol>
          </div>
          <div id='yestChal' style='display:none'>
