--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
             <ul>
                <li><a href='https://medium.com/'>Medium</a></li>
                <li><a href='https://deepmind.com/'>DeepMind</a></li>
+               <li><a href='https://ai.facebook.com/blog'>Facebook AI</a></li>
                <li><a href='https://openai.com/'>OpenAI</a></li>
                <li><a href='http://aiweekly.co/'>AIWeekly</a></li>
                <li><a href='https://www.coursera.org/in-progress'>Coursera</a></li>
