--- a/index.html
+++ b/index.html
@@ -160,22 +160,23 @@
       <div id="Deadlines" class="tabcontent box">
 
          <div class="sidenav">
-            <a href="#" onclick="today()">August 30 2020</a>
-            <a href="#" onclick="yesterday()">July 30 2020</a>
+            <a href="#" onclick="today()">September 1 2020</a>
+            <a href="#" onclick="yesterday()">August 2020</a>
             <a href="#" onclick="projectsNow()">Growing work</a>
             <a href="#" onclick="selfchal()">Self assigned challenges</a>
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>[FEYNMAN TECHNIQUE]Deep learning theory by YannLeCun - <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">Linear algebra in Neural Network context</a></li>
+               <li>CNN for sentece classification <a href="https://arxiv.org/pdf/1408.5882.pdf">here</a></li>
+               <li>NIPS series - 2 hours : <a href="https://videos.neurips.cc/">here</a></li>
+               <li>Deep learning 5th module <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
-               <li>Harsha Coursera thing</li>
+               <li>Harsha Coursera thing - week 4</li>
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
                <li>Deep learning Chapter 5</li>
-               <li>Get caught up with OS </li>
-
+               <li>Get caught up with OS and quiz</li>
                <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
-
+               <li>TA work</li>
                <li>Study Ch 3 from Intro to Statistical Learning book.</li>
                <li>[SELF CHALLENGING]Yann Le Cun - Self Supervised Learning Lecture <a href="https://www.youtube.com/watch?v=SaJL4SLfrcY&feature=youtu.be&fbclid=IwAR2vu6rksGSZ6ldiTnRXmU68vb0_aCMczLG3JrD7RIiDeWpR0Ih7my3hfYg">[1:30min]</a></li>
                <li>Implement code of the paper you read Image generation [DRAW and Audio to video]</li>
