--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                <li>Back propogation through time <a href='http://www.wildml.com/2015/10/recurrent-neural-networks-tutorial-part-3-backpropagation-through-time-and-vanishing-gradients/'>sample</a></li>
                <li>Deep learning Chapter 5</li>
                <li>Get caught up with OS and quiz</li>
+               <li>[IMP Research Paper] Deep Residual Networks for Image Recognition<a href="https://arxiv.org/pdf/1512.03385.pdf">here</a></li>
                <li>CNN Stanford course<a href="https://www.youtube.com/watch?v=h7iBpEHGVNc&list=PL3FW7Lu3i5JvHM8ljYj-zLfQRF3EO8sYv&index=3"> lect-3 [56min]</a></li>
                <li>TA work</li>
                <li>Study Ch 3 from Intro to Statistical Learning book.</li>
