--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
          </div>
          <div id='todayChal' style='display:none'>
             <ol>
-               <li>CNN for sentece classification <a href="https://arxiv.org/pdf/1408.5882.pdf">here</a></li>
-               <li>NIPS series - 2 hours : <a href="https://videos.neurips.cc/">here</a></li>
+               <li>CNN for sentence classification <a href="https://arxiv.org/pdf/1408.5882.pdf">here</a></li>
+               <li>NIPS series - 2 hours : 1:06:46<a href="https://videos.neurips.cc/">here</a></li>
                <li>Deep learning 5th module <a href="https://atcold.github.io/pytorch-Deep-Learning/en/week05/05-1/">here</a></li>
                <li>Implement BiLSTM <a href='https://pytorch.org/tutorials/beginner/nlp/advanced_tutorial.html'>Tensorflow</a></li>
                <li>Harsha Coursera thing - week 4</li>
